Installed gulp and gutil

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "url": "?.git"
   },
   "author": "Srinivas",
-  "license": "ISC"
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-util": "^3.0.4"
+  }
 }
